fixed android issue with streams